Refactor string formatting to use the new formatted() method; update Gradle to SDK 35 and Java 21; enhance CI configuration (#4)